# IPC-with-cht

./: .gitignore  CMakeLists.txt  NngIpcAioWorker.cpp  NngIpcAioWorker.h  NngIpcPublishHandler.cpp  NngIpcPublishHandler.h  NngIpcPublishHandler_C.cpp  NngIpcPublishHandler_C.h  NngIpcPubsubForwarder.c  NngIpcRequestHandler.cpp  NngIpcRequestHandler.h  NngIpcRequestHandler_C.cpp  NngIpcRequestHandler_C.h  NngIpcResponseHandler.cpp  NngIpcResponseHandler.h  NngIpcResponseHandler_C.cpp  NngIpcResponseHandler_C.h  NngIpcSubscribeHandler.cpp  NngIpcSubscribeHandler.h  NngIpcSubscribeHandler_C.cpp  NngIpcSubscribeHandler_C.h  cht_ipc_client.cpp  cht_ipc_client.h  cht_ipc_common.h  cht_p2pagent.c  nngipc.h  nngipc_C.h  system_service.cpp  utils.cpp  utils.h
async/: client  run.sh
demo/pubsub_forwarder/: CMakeLists.txt  pubsub_forwarder.c
implement/cht_p2pagent/: CMakeLists.txt  cht_ipc_client.cpp  cht_ipc_client.h  cht_ipc_common.h  system_service.cpp
implement/test_pubsub/: CMakeLists.txt  publisher.cpp  publisher_forward.cpp  subscriber.cpp  subscriber_forward.cpp
implement/zwipcsystem/: CMakeLists.txt  zwsystem_ipc_event.cpp  zwsystem_ipc_event.h  zwsystem_ipc_event_defined.h  zwsystem_ipc_event_listener.cpp
implement/zwsystemInterface/: CMakeLists.txt  zwsystem_ipc_client.cpp  zwsystem_ipc_client.h  zwsystem_ipc_client_test.cpp  zwsystem_ipc_common.h  zwsystem_ipc_defined.h  zwsystem_ipc_service.cpp
implement/zwsystemInterface/simulation_cht_p2p_requester/: CMakeLists.txt  cht_p2p_agent_c.h  cht_p2p_agent_c_stub.cpp
implement/zwsystemInterface/test_ipc/: CMakeLists.txt  camera_parameters_manager.cpp  camera_parameters_manager.h  cht_p2p_agent_payload_defined.h  cht_p2p_camera_api.cpp  cht_p2p_camera_api.h  cht_p2p_camera_command_handler.cpp  cht_p2p_camera_command_handler.h  cht_p2p_camera_control_handler.cpp  cht_p2p_camera_control_handler.h  cht_p2p_camera_example_menu.cpp  cht_p2p_camera_streaming_handler.cpp  cht_p2p_camera_streaming_handler.h  timezone_utils.cpp  timezone_utils.h
output/include/: NngIpcAioWorker.h  NngIpcSubscribeHandler.h
prebuild/lib/: libnng.so.1.11.0
